--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <!--SUPPORT IE12-IE10-->
     <script src="/assets/js/classList.min.js"></script>
     <script src="/assets/js/shim.min.js"></script>
