add datepicker test

--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,12 @@
     <title>DomTest</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="http://hello1024.oss-cn-beijing.aliyuncs.com/ng-dashboard/favicon.ico">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <!--SUPPORT IE12-IE10-->
-    <script src="/assets/js/classList.min.js"></script>
-    <script src="/assets/js/shim.min.js"></script>
+    <!-- <script src="http://hello1024.oss-cn-beijing.aliyuncs.com/ng-dashboard/classList.min.js"></script>
+    <script src="http://hello1024.oss-cn-beijing.aliyuncs.com/ng-dashboard/shim.min.js"></script> -->
 </head>
 
 <body>
